<resources>
    <string name="app_name">InternetCookBook</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottomNavFollowers">Followers</string>
    <string name="bottomNavHome">Home</string>
    <string name="bottomNavCamera">Camera</string>
    <string name="logo_transition" translatable="false">Logo Transition</string>
    <string name="select_image">Please Enter a Title</string>

    <string name="first_fragment">First</string>
    <string name="second_fragment">Second</string>
    <string name="third_fragment">Third</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="surname">SurName</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="return_string">Return</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign up</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="post">Post</string>
    <string name="add_images_to_post">Add Images to Post</string>
    <string name="ingredients">Ingredients</string>
    <string name="search_by_name">Search By Name</string>
    <string name="cupboard">Cupboard</string>
    <string name="basket">Basket</string>
    <string name="following">Following</string>
    <string name="enter_shop">Enter Shop</string>
    <string name="search">Search</string>
    <string name="search_cupboard">Search Cupboard</string>
    <string name="search_following">Search Following</string>
    <string name="search_basket">Search Basket</string>
    <string name="huh_no_shop">!Huh No Shop</string>
    <string name="name">Name</string>
    <string name="shop">Shop</string>
    <string name="price">Price</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="add">Add</string>
    <string name="search_username">Search Username</string>
    <string name="is_this_expiration_date_correct">Is this Expiration Date Correct</string>
    <string name="medium">Medium</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="follow">Follow</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string-array name="fragment_titles">
        <item>@string/first_fragment</item>
        <item>@string/second_fragment</item>
        <item>@string/third_fragment</item>
    </string-array>

    <string-array name="difficulty_level">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string-array name="number_of_people">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
    </string-array>
</resources>
