<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.RegisterFragmentView">


    <EditText
        android:id="@+id/mRegisterFirstname"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/border_box_edittext"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/mSurname"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mSurname"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/border_box_edittext"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mRegisterFirstname"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mRegisterSignupButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toTopOf="@+id/mLoginReturnButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/bluebutton"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@+id/mRegisterProfilePic" />

    <Button
        android:id="@+id/mLoginReturnButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/return_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/redbutton"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@+id/mRegisterSignupButton" />

    <EditText
        android:id="@+id/mFriendEmail"
        android:layout_width="@dimen/dimension300"
        android:layout_height="@dimen/dimension50"
        android:ems="10"
        android:background="@drawable/border_box_edittext"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/mPasswordRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mRegisterFirstname" />

    <EditText
        android:id="@+id/mPasswordRegister"
        android:layout_width="@dimen/dimension300"
        android:layout_height="@dimen/dimension50"
        android:ems="10"
        android:hint="@string/password"
        android:background="@drawable/border_box_edittext"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/mUsernameRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mFriendEmail" />

    <EditText
        android:id="@+id/mUsernameRegister"
        android:layout_width="@dimen/dimension300"
        android:layout_height="@dimen/dimension50"
        android:ems="10"
        android:hint="@string/username"
        android:background="@drawable/border_box_edittext"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/mRegisterProfilePic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mPasswordRegister" />

    <ImageView
        android:id="@+id/mRegisterProfilePic"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:src="@drawable/baseline_insert_photo_black_36"
        app:layout_constraintBottom_toTopOf="@+id/mRegisterSignupButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mUsernameRegister" />

    <ImageView
        android:id="@+id/mLogo"
        android:layout_width="159dp"
        android:layout_height="119dp"
        android:src="@drawable/internet_cookbook_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>