<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".start.StartFragment">

    <Button
        android:id="@+id/mStartLogin"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorGreen"
        android:textColor="@color/colorWhite"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mStartRegister"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:text="@string/register"
        app:layout_constraintBottom_toTopOf="@+id/mStartLogin"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorBlue"
        android:textColor="@color/colorWhite"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/mLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:transitionName="@string/logo_transition"
        app:layout_constraintBottom_toTopOf="@+id/mStartRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/internet_cookbook_logo" />
</androidx.constraintlayout.widget.ConstraintLayout>