<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/food_create"
    tools:context=".FoodCreateView">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintFragmentSettings"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/colorWhite"
                android:fitsSystemWindows="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <ImageButton
                    android:id="@+id/mReturnButton"
                    android:layout_width="@dimen/dimension50"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:background="@null"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/baseline_arrow_back_black_36" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <ImageView
                android:id="@+id/mFoodCreateImage"
                android:layout_width="match_parent"
                android:layout_height="300dp" />

            <EditText
                android:id="@+id/mFoodCreateName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/mFoodCreatePrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/price"
                android:inputType="textPersonName" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimension20sp"
                android:text="@string/expiration_date" />

            <CalendarView
                android:id="@+id/mFoodCreateExpirationDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/mFoodCreateShop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/shop" />

            <Button
                android:id="@+id/mFoodCreateAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>