<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginFragmentView">


    <EditText
        android:id="@+id/mLoginEmail"
        android:layout_width="@dimen/dimension300"
        android:layout_height="@dimen/dimension50"
        android:layout_marginBottom="70dp"
        android:ems="10"
        android:hint="@string/email"
        android:background="@drawable/border_box_edittext"
        app:layout_constraintBottom_toTopOf="@+id/mLoginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/mLoginPassword"
        android:layout_width="@dimen/dimension300"
        android:layout_height="@dimen/dimension50"
        android:layout_marginBottom="60dp"
        android:background="@drawable/border_box_edittext"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/mLoginSignInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mLoginSignInButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="80dp"
        android:text="@string/sign_in"
        android:background="@drawable/bluebutton"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/mLoginReturnButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mLoginReturnButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="60dp"
        android:text="@string/return_string"
        android:background="@drawable/redbutton"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/mLogo"
        android:layout_width="306dp"
        android:layout_height="231dp"
        android:src="@drawable/internet_cookbook_logo"
        app:layout_constraintBottom_toTopOf="@+id/mLoginEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/dimension_60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginEnd="180dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>