<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/mQuestionDialog"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:text="@string/is_this_expiration_date_correct"
        android:textSize="@dimen/dimension20sp" />

    <TextView
        android:id="@+id/mQueryDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mFoodImageDialog"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:textSize="@dimen/dimension20sp"
        android:text="TextView" />

    <Button
        android:id="@+id/mQueryDialogYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mQueryDialog"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/greenbutton"
        android:textColor="@color/colorWhite"
        android:text="@string/yes" />

    <Button
        android:id="@+id/mQueryDialogNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mQueryDialog"
        android:layout_alignParentStart="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/redbutton"
        android:textColor="@color/colorWhite"
        android:text="@string/no" />

    <ImageView
        android:id="@+id/mFoodImageDialog"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_below="@+id/mQuestionDialog"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        tools:srcCompat="@tools:sample/avatars" />

</RelativeLayout>